my feature columns sap done

--- a/sections/my-img-text-overlay.liquid
+++ b/sections/my-img-text-overlay.liquid
@@ -11,13 +11,15 @@
       height: {{- wrapper_height -}}vw !important;
     }
 {%- endstyle -%}
+
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
     .hero-container {
         max-width: 1200px;
-        margin: 0 auto; 
+        margin: 0 auto;
+        font-family: Roboto;
     }
     .hero-layout{
-        background-size: cover;
         width: 100%;
         position: relative;
         height: 475px;
@@ -36,7 +38,7 @@
         right: 0;
         bottom: 0;
         left: 0;
-        background-color: rgba(0, 0, 0, .4);
+        background-color: rgba(0, 0, 0, .1);
         z-index: 1;
     }
     .hero-fixed__content,
@@ -60,15 +62,17 @@
         width: 50%;
     }
     .hero-title{
-        color: #fff;
-        font-size: 30px;
+        color: #000;
+        font-size: 36px;
+        font-weight: 400;
         margin-bottom: 0px;
+        font-family: Roboto;
     }
     .hero-text p{
-        line-height: 20px;
-        color: #fff;
-        font-size: 18px;
+        color: #000;
+        font-size: 16px;
         margin-bottom: 20px;
+        font-family: Roboto;
     }
     .hero--xs{
         height: 200px;
@@ -84,6 +88,11 @@
     }
     .hero--xl{
         height: 680px;
+    }
+
+    .hero_btn-link{
+        padding: 7px 22px;
+        background-color: #222222;
     }
     
     @media only screen and (max-width: 1300px){
@@ -127,7 +136,7 @@
         <div class="hero-container">
     {% endif %}
     {% if section.settings.layout_hero == 'fixed-width' and section.settings.hero_height == "adapt" %}
-        {% assign slide_width = 1090 %}
+        {% assign slide_width = 1090 %} 
         {% assign min_aspect_ratio = section.settings.image.aspect_ratio | default: 2.0 %}
             <div class="hero-overlay hero--adapt" 
             data-layout="{{ section.settings.layout_hero }}">
@@ -135,24 +144,18 @@
             {% if section.settings.image.width < max_width %}
                 {% assign slide_width = section.settings.image.width %}
             {% endif %}
-            {% if section.settings.align_text == 'center' %}
+            {% if section.settings.align_content == 'center' %}
                 {%- style -%}
                     .hero-fixed__content,
                     .hero-inner{
                         justify-content: center;
                     }
-                    .hero-text__container{
-                        text-align: center;
-                    }
                 {%- endstyle -%}
-            {% elsif section.settings.align_text == 'left' %}
+            {% elsif section.settings.align_content == 'left' %}
                 {%- style -%}
                     .hero-fixed__content,
                     .hero-inner{
                         justify-content: flex-start;
-                    }
-                    .hero-text__container{
-                        text-align: left;
                     }
                 {%- endstyle -%}
             {% else %}
@@ -161,6 +164,23 @@
                     .hero-inner{
                         justify-content: flex-end;
                     }
+                {%- endstyle -%}
+            {% endif %}
+
+            {% if section.settings.align_text == 'center' %}
+                {%- style -%}
+                    .hero-text__container{
+                        text-align: center;
+                    }
+                {%- endstyle -%}
+            {% elsif section.settings.align_text == 'left' %}
+                {%- style -%}
+                    .hero-text__container{
+                        text-align: left;
+                    }
+                {%- endstyle -%}
+            {% else %}
+                {%- style -%}
                     .hero-text__container{
                         text-align: right;
                     }
@@ -225,24 +245,18 @@
             {{ 'lifestyle-1' | placeholder_svg_tag: 'placeholder-svg' }}
             </div>
         {%- endif -%}
-        {% if section.settings.align_text == 'center' %}
+        {% if section.settings.align_content == 'center' %}
             {%- style -%}
                 .hero-fixed__content,
                 .hero-inner{
                     justify-content: center;
                 }
-                .hero-text__container{
-                    text-align: center;
-                }
             {%- endstyle -%}
-        {% elsif section.settings.align_text == 'left' %}
+        {% elsif section.settings.align_content == 'left' %}
             {%- style -%}
                 .hero-fixed__content,
                 .hero-inner{
                     justify-content: flex-start;
-                }
-                .hero-text__container{
-                    text-align: left;
                 }
             {%- endstyle -%}
         {% else %}
@@ -251,6 +265,23 @@
                 .hero-inner{
                     justify-content: flex-end;
                 }
+            {%- endstyle -%}
+        {% endif %}
+
+        {% if section.settings.align_text == 'center' %}
+            {%- style -%}
+                .hero-text__container{
+                    text-align: center;
+                }
+            {%- endstyle -%}
+        {% elsif section.settings.align_text == 'left' %}
+            {%- style -%}
+                .hero-text__container{
+                    text-align: left;
+                }
+            {%- endstyle -%}
+        {% else %}
+            {%- style -%}
                 .hero-text__container{
                     text-align: right;
                 }
@@ -419,6 +450,34 @@
             "id": "align_text",
             "label": {
                 "en": "Text align"
+            },
+            "default": "center",
+            "options": [
+                {
+                    "value": "left",
+                    "label": {
+                        "en": "Left"
+                    }
+                },
+                {
+                    "value": "center",
+                    "label": {
+                        "en": "Center"
+                    }
+                },
+                {
+                    "value": "right",
+                    "label": {
+                        "en": "Right"
+                    }
+                }
+            ]
+        },
+        {
+            "type": "radio",
+            "id": "align_content",
+            "label": {
+                "en": "Content align"
             },
             "default": "center",
             "options": [
