--- a/sections/feature-columns.liquid
+++ b/sections/feature-columns.liquid
@@ -5,9 +5,15 @@
     </div>
   {% endif %}
 
+  <!-- Div bự (grid) chứa các column
+       Nếu có khác 5 column tạo class grid--uniform
+  -->
   <div class="grid {% unless section.blocks.size == 5 %}grid--uniform{% endunless %} grid--flush-bottom">
+    <!-- Giá trị chiều rộng của column và chiều cao  -->
     {%- assign grid_item_width = 'medium-up--one-third' -%}
     {%- assign max_height = 345 -%}
+
+    <!-- Tùy trường hợp mà column sẽ có chiều cao và chiều rộng khác nhau -->
     {% case section.blocks.size %}
       {% when 1 %}
         {%- assign grid_item_width = 'medium-up--one-half' -%}
@@ -19,7 +25,9 @@
         {%- assign grid_item_width = 'medium-up--one-half' -%}
         {%- assign max_height = 530 -%}
     {% endcase %}
+    <!-- Lặp qua từng block -->
     {% for block in section.blocks %}
+      <!-- Nếu có 5 block và vị trí đang lặp < 3 -->
       {% if section.blocks.size == 5 and forloop.index < 3 %}
         {%- assign column_width = 'medium-up--one-half' -%}
         {%- assign max_height = 530 -%}
