--- a/sections/sub-header.liquid
+++ b/sections/sub-header.liquid
@@ -22,7 +22,6 @@
 
     {% render 'sub-header-snippet' with sub-header-classes as sub-header-classes%}
 
-
     <style>
         .align-center{
             /* flex-direction: column;
@@ -75,6 +74,7 @@
     {% if section.settings.price_underline == "underline" %}
         <style>
             .sub-header__underline{
+                color: {{section.settings.color_txt}};
                 padding: 0 2px 0 1px;
                 border-bottom: 1px solid {{section.settings.color_txt}};
             }    
@@ -190,17 +190,19 @@
             ]
         },
         {
-            "type": "range",
-            "id": "price",
+            "type": "text",
+            "id": "link_label",
             "label": {
-                "en": "Price",
-                "vi": "Giá"
-            },
-            "min": 0,
-            "max": 1000,
-            "step": 10,
-            "default": 300
-            
+                "en": "Link label",
+                "vi": "Tên đường dẫn"
+            }
+        },
+        {
+            "type": "url",
+            "id": "link",
+            "label": {
+                "en": "Button-link"
+            }
         }
     ]
 }
